// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`not selectable 1`] = `
.c6 {
  position: relative;
}

.c7 {
  position: relative;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8 {
  font-size: 12px;
  font-weight: normal;
  color: #b8bec3;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c4 {
  color: #000;
  opacity: 0.8;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 14px;
  padding-right: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c15 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
  cursor: default;
}

.c13 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c13 .c5:after {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
}

.c2 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c11 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  background-image: linear-gradient(to right,#fff,rgba(255,255,255,0));
}

.c10 {
  position: absolute;
  left: -1px;
  top: 0;
  bottom: 0;
  width: 86px;
  z-index: 1;
  opacity: 0;
  -webkit-transition: opacity 0.3s ease-out;
  transition: opacity 0.3s ease-out;
  pointer-events: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  overflow: hidden;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 .c3 {
  padding-left: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
}

.c14 {
  display: inline-block;
  width: 1px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      title="Браузер →
Chrome"
    >
      <span
        class="c3 c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c7"
          >
            Браузер
          </div>
        </div>
        <div
          class="c8"
        >
          Chrome
        </div>
      </span>
    </div>
  </div>
  <div
    class="c9"
  >
    <div
      class="c10"
      data-testid="anchor"
    >
      <div
        class="c11"
      />
    </div>
    <div
      class="c12"
    >
      <div
        class="c13"
        title="Версия браузера"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c7"
            >
              Версия браузера
            </div>
          </div>
        </span>
      </div>
    </div>
    <span
      class="c14"
    />
  </div>
</div>
`;

exports[`selectable 1`] = `
.c6 {
  position: relative;
}

.c7 {
  position: relative;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8 {
  font-size: 12px;
  font-weight: normal;
  color: #b8bec3;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c4 {
  color: #000;
  opacity: 0.8;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 14px;
  padding-right: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
  cursor: default;
}

.c13 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c13 .c5:after {
  display: none;
}

.c11 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  background-image: linear-gradient(to right,#fff,rgba(255,255,255,0));
}

.c10 {
  position: absolute;
  left: -1px;
  top: 0;
  bottom: 0;
  width: 86px;
  z-index: 1;
  opacity: 0;
  -webkit-transition: opacity 0.3s ease-out;
  transition: opacity 0.3s ease-out;
  pointer-events: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  overflow: hidden;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 .c3 {
  padding-left: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
}

.c14 {
  display: inline-block;
  width: 1px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      title="Браузер →
Chrome"
    >
      <span
        class="c3 c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c7"
          >
            <span
              class="control link link_theme_normal"
              data-lego="react"
              role="button"
              tabindex="0"
            >
              Браузер
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          Chrome
        </div>
      </span>
    </div>
  </div>
  <div
    class="c9"
  >
    <div
      class="c10"
      data-testid="anchor"
    >
      <div
        class="c11"
      />
    </div>
    <div
      class="c12"
    >
      <div
        class="c13"
        title="Версия браузера"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c7"
            >
              Версия браузера
            </div>
          </div>
        </span>
      </div>
    </div>
    <span
      class="c14"
    />
  </div>
</div>
`;

exports[`without subtitle 1`] = `
.c6 {
  position: relative;
}

.c7 {
  position: relative;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c4 {
  color: #000;
  opacity: 0.8;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 14px;
  padding-right: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
  cursor: default;
}

.c12 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c12 .c5:after {
  display: none;
}

.c14 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c10 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  background-image: linear-gradient(to right,#fff,rgba(255,255,255,0));
}

.c9 {
  position: absolute;
  left: -1px;
  top: 0;
  bottom: 0;
  width: 86px;
  z-index: 1;
  opacity: 0;
  -webkit-transition: opacity 0.3s ease-out;
  transition: opacity 0.3s ease-out;
  pointer-events: none;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  overflow: hidden;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 .c3 {
  padding-left: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
}

.c13 {
  display: inline-block;
  width: 1px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      title="Браузер"
    >
      <span
        class="c3 c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c7"
          >
            <span
              class="control link link_theme_normal"
              data-lego="react"
              role="button"
              tabindex="0"
            >
              Браузер
            </span>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
      data-testid="anchor"
    >
      <div
        class="c10"
      />
    </div>
    <div
      class="c11"
    >
      <div
        class="c12"
        title="Версия браузера"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c7"
            >
              Версия браузера
            </div>
          </div>
        </span>
      </div>
    </div>
    <span
      class="c13"
    />
  </div>
</div>
`;

exports[`without subtitle not selectable 1`] = `
.c6 {
  position: relative;
}

.c7 {
  position: relative;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c4 {
  color: #000;
  opacity: 0.8;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 14px;
  padding-right: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c14 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
  cursor: default;
}

.c12 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c12 .c5:after {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
}

.c2 .c5:after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  right: -13px;
  border-color: #999;
  border-width: 1px;
  border-style: solid solid none none;
  width: 4px;
  height: 4px;
  -webkit-transform: rotate(45deg) translateY(-60%);
  -ms-transform: rotate(45deg) translateY(-60%);
  transform: rotate(45deg) translateY(-60%);
  pointer-events: none;
}

.c10 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  background-image: linear-gradient(to right,#fff,rgba(255,255,255,0));
}

.c9 {
  position: absolute;
  left: -1px;
  top: 0;
  bottom: 0;
  width: 86px;
  z-index: 1;
  opacity: 0;
  -webkit-transition: opacity 0.3s ease-out;
  transition: opacity 0.3s ease-out;
  pointer-events: none;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  overflow: hidden;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 .c3 {
  padding-left: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  overflow: hidden;
}

.c13 {
  display: inline-block;
  width: 1px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      title="Браузер"
    >
      <span
        class="c3 c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c7"
          >
            Браузер
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    class="c8"
  >
    <div
      class="c9"
      data-testid="anchor"
    >
      <div
        class="c10"
      />
    </div>
    <div
      class="c11"
    >
      <div
        class="c12"
        title="Версия браузера"
      >
        <span
          class="c3 c4"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c7"
            >
              Версия браузера
            </div>
          </div>
        </span>
      </div>
    </div>
    <span
      class="c13"
    />
  </div>
</div>
`;
